add students page

--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -2,6 +2,7 @@
     @include center;
     flex-direction: row;
     gap: 20px;
+    margin-bottom: 100px;
     
     &__card{
         @include center;
