--- a/scss/layouts/_character-page.scss
+++ b/scss/layouts/_character-page.scss
@@ -1,16 +1,48 @@
-.character-page{
+.character-page {
     @include center;
     flex-direction: column;
     gap: 70px;
     margin-top: 100px;
 
-    &__title{
+    &__title {
         font-family: "Bluu Next Cyrillic", serif;
-    @include text(80px, 700, 1.25);
-    color: var(--accent-color);
-    text-align: center;
-    text-transform: uppercase;
-    margin-bottom: 70px;
+        @include text(80px, 700, 1.25);
+        color: var(--accent-color);
+        text-align: center;
+        text-transform: uppercase;
+        margin-bottom: 70px;
+    }
+
+    &__houses {
+        @include center;
+        flex-direction: row;
+        border-radius: 100px;
+        border: 1px solid #fff;
+        margin-bottom: 50px;
+    }
+
+    &__house{
+        @include center;
+        @include size(315px, 60px);
+        flex-direction: row;
+        gap: 10px;
+        font-family: "Bluu Next Cyrillic", serif;
+        @include text(18px, 700, 1.3);
+        color: #fff;
+        text-transform: uppercase;
+        background-color: transparent;
+        border: none;
+
+        &:focus,
+        &:active,
+        &:hover{
+            border: none;
+          background-color: var(--btn-color);
+          color: var(--main-color);  
+          border-radius: 100px;
+          transition: 1s;
+        }
     }
 
 }
+
