--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,6 +4,8 @@
 @import './utils/fonts';
 @import './utils/mixins';
 
+@import './animations/animations';
+
 @import './components/character';
 @import './components/container';
 @import './components/navigation';
