--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,7 +1,9 @@
+
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+
   }
 
   body {
@@ -24,3 +26,13 @@
     max-width: 100%;
   }
 
+
+  ::-webkit-scrollbar {
+    width: 8px;
+    background-color: #181818;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: var(--accent-color); 
+    opacity: 0.4;
+  }
