--- a/scss/components/_character.scss
+++ b/scss/components/_character.scss
@@ -1,26 +1,45 @@
-.character{
+.character {
     width: 100%;
     display: grid;
     grid-template-columns: repeat(4, 295px);
     grid-template-rows: repeat(3, 452px);
     gap: 20px;
-    margin-bottom: 100px;
+    margin-bottom: 100px;  
 
-    &__card{
+    &__inner{
         position: relative;
-        border-radius: 20px;
-        background: linear-gradient(360deg, #0F0F0F -0.99%, rgba(15, 15, 15, 0.74) 18.85%, rgba(15, 15, 15, 0) 56.04%);
+        @include size(100%, 100%); 
         text-align: left;
+        transition: transform 0.6s;
+        transform-style: preserve-3d;
+
+        &:hover{
+            transform: rotateY(180deg);
+        }
     }
 
-    &__img{
+    &__front{
+        background: linear-gradient(360deg, #0F0F0F -0.99%, rgba(15, 15, 15, 0.74) 18.85%, rgba(15, 15, 15, 0) 56.04%);
+        z-index: 1;
+    }
+
+    &__front, 
+    &__back{
+        position: absolute;
+        @include size(100%, 100%);        
+        backface-visibility: hidden;
+        border-radius: 20px;
+    }
+
+    &__img {
         position: absolute;
         @include size(295px, 452px);
         border-radius: 20px;
         z-index: -2;
+        object-fit: cover;
     }
 
-    &__text{
+    &__text {
         position: absolute;
         display: flex;
         flex-direction: column;
@@ -31,19 +50,19 @@
         font-family: 'Inter', sans-serif;
     }
 
-    &__name{
+    &__name {
         @include text(26px, 500, 1.4);
         color: #fff;
         margin-bottom: 5px;
     }
 
-    &__house{
+    &__house {
         @include text(16px, 400, 1.4);
         color: var(--accent-color);
         margin-bottom: 15px;
     }
 
-    &__info{
+    &__info {
         position: relative;
         display: flex;
         align-items: center;
@@ -55,7 +74,11 @@
         border: none;
         cursor: pointer;
 
-        &-circle{
+        &-arrow{
+            animation: moveArrow 2s ease-in-out infinite;
+        }
+
+        &-circle {
             position: absolute;
             @include size(20px, 20px);
             background-color: var(--accent-color);
@@ -65,4 +88,33 @@
             z-index: -1;
         }
     }
+
+    &__back {
+        display: flex;
+        align-items: left;
+        justify-content: flex-start;
+        flex-direction: column;
+        gap: 2px;     
+        background-color: #0e0e0e;
+        padding: 20px;
+        overflow-y: auto;
+        overflow-x: hidden;
+        text-transform: capitalize;
+        transform: rotateY(180deg);
+        z-index: 2;
+
+    }
+
+    &__key{
+        width: 241px;
+        font-family: 'Inter', sans-serif;
+        @include text(14px, 400, 1.4);
+        color: #fff;
+
+        &-value{
+            color: var(--accent-color);
+        }
+    }
+
+
 }
